force-app/main/default/objects/MCUBE_Object_Api__c/MCUBE_Object_Api__c.object-meta.xml
<CustomObject>
    <label>MCUBE Object Api</label>
    <nameField>
        <label>MCUBE Object Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCUBE Object Api</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>