force-app/main/default/objects/MCUBE_Object_Api__c/fields/Field4__c.field-meta.xml
<CustomField>
    <fullName>Field4__c</fullName>
    <label>Field 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>