force-app/main/default/objects/MCUBE_Object_Api__c/fields/Field5__c.field-meta.xml
<CustomField>
    <fullName>Field5__c</fullName>
    <label>Field 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>