force-app/main/default/objects/MCUBE_Object_Api__c/fields/Value4__c.field-meta.xml
<CustomField>
    <fullName>Value4__c</fullName>
    <label>Value 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>