force-app/main/default/objects/MCUBE_Object_Api__c/fields/Value5__c.field-meta.xml
<CustomField>
    <fullName>Value5__c</fullName>
    <label>Value 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>