force-app/main/default/objects/MCUBE_Object_Api__c/fields/Value_5__c.field-meta.xml
<CustomField>
    <fullName>Value_5__c</fullName>
    <label>Value 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>